--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py37
 deps =
     -U
     -r{toxinidir}/requirements.txt
-    -r{toxinidir}/test-requirements.txt
+    -r{toxinidir}/requirements-test.txt
 commands =
     flake8 --max-line-length 119 local_data_api
     mypy --ignore-missing-imports local_data_api
