--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - pip install -r test-requirements.txt
+  - pip install -r requirements-test.txt
 
 script:
   - flake8 --max-line-length 119 local_data_api
