--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 script:
   - flake8 --max-line-length 119 local_data_api
   - mypy --ignore-missing-imports local_data_api
-  - nosetests -v tests/local_data_api
+  - nosetests -v tests
