--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.1'
 
 services:
-  local_data_api:
-    build: .
+  local-data-api:
+    image: koxudaxi/local-data-api
     restart: always
     environment:
       MYSQL_HOST: db
@@ -10,7 +10,7 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: example
     ports:
-      - "18080:80"
+      - "8080:80"
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
