--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pydantic==0.26
 email-validator==1.0.4
-fastapi==0.27.2
+fastapi==0.29.1
 SQLAlchemy==1.3.4
-mysqlclient==1.4.2.post1
+PyMySQL==0.9.3
 starlette==0.12.0
