--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,28 @@
 dist: xenial
 language: python
 python:
-  - "3.7"
+- '3.7'
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r requirements-test.txt
+- pip install -r requirements.txt
+- pip install -r requirements-test.txt
+- pip install mkdocs mkdocs-material
+
+cache: pip
 
 script:
-  - flake8 --max-line-length 119 local_data_api
-  - mypy --ignore-missing-imports local_data_api
-  - nosetests -v --with-coverage tests
+- flake8 --max-line-length 119 local_data_api
+- mypy --ignore-missing-imports local_data_api
+- nosetests -v --with-coverage tests
+- cp README.md docs/index.md && mkdocs build --verbose --clean --strict
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: site
+  on:
+    branch: master
 
 after_success:
-    - codecov
+- codecov
