--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 dist: xenial
 language: python
+
 python:
 - '3.7'
+
+services:
+  - docker
 
 install:
 - pip install -r requirements.txt
@@ -17,12 +21,16 @@ script:
 - cp README.md docs/index.md && mkdocs build --verbose --clean --strict
 
 deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  local_dir: site
-  on:
-    branch: master
+  - provider: script
+    script: bash scripts/push-image.sh
+    on:
+      branch: master
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
+    local_dir: site
+    on:
+      branch: master
 
 after_success:
 - codecov
