--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ cache: pip
 script:
 - flake8 --max-line-length 119 local_data_api
 - mypy --ignore-missing-imports local_data_api
-- nosetests -v --with-coverage tests
+- nosetests -v --with-coverage --cover-package=local_data_api --cover-erase tests
 - codecov
 - cp README.md docs/index.md && mkdocs build --verbose --clean --strict
 
