--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ cache: pip
 script:
 - black local_data_api tests --check --skip-string-normalization
 - mypy --ignore-missing-imports --disallow-untyped-defs local_data_api
-- nosetests -v --with-coverage --cover-package=local_data_api --cover-erase tests
-- isort --recursive --check-only -w 100 --thirdparty local_data_api local_data_api tests -m 3 -tc
+- isort --recursive --check-only -w 88 --combine-as --thirdparty local_data_api local_data_api tests -m 3 -tc
 - pytest --cov=local_data_api tests
 - cp README.md docs/index.md && mkdocs build --verbose --clean --strict
 after_success:
