--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "8080:80"
   db:
-    image: mysql
+    image: mysql:5.6
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
