--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
     PyMySQL == 0.9.3
     JPype1 == 0.6.3
     JayDeBeApi == 1.1.1
+    psycopg2 == 2.8.5
 
 tests_require =
     pytest
