fix pytest version

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ install_requires =
     psycopg2 == 2.8.5
 
 tests_require =
-    pytest
+    pytest>=4.6
     pytest-benchmark
     pytest-cov
     pytest-mock
