--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -6,16 +6,19 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:6.1.0"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
 apply plugin: 'kotlinx-serialization'
+apply plugin: "com.github.johnrengelman.shadow"
 
 group 'com.koxudaxi.local-data-api'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
+
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
@@ -40,4 +43,5 @@ dependencies {
     implementation "org.mariadb.jdbc:mariadb-java-client:2.7.2"
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    implementation "org.httprpc:httprpc-client:8.1.2"
 }
