--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'kotlin'
 apply plugin: 'application'
 apply plugin: 'kotlinx-serialization'
 apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: "jacoco"
 
 group 'com.koxudaxi.local-data-api'
 version '0.0.1'
@@ -33,6 +34,13 @@ repositories {
     maven { url 'https://kotlin.bintray.com/ktor' }
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
@@ -42,6 +50,9 @@ dependencies {
     implementation "io.ktor:ktor-serialization:$ktor_version"
     implementation "org.mariadb.jdbc:mariadb-java-client:2.7.2"
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
-    testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     implementation "org.httprpc:httprpc-client:8.1.2"
+    testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    testImplementation "com.h2database:h2:1.4.200"
+    testImplementation "io.mockk:mockk:1.10.6"
+
 }
