--- a/kotlin/local-data-api/resources/application.conf
+++ b/kotlin/local-data-api/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.koxudaxi.local_data_api.ApplicationKt.module ]
+        modules = [ com.koxudaxi.localDataApi.ApplicationKt.module ]
     }
 
 }
