--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -18,7 +18,7 @@ apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: "jacoco"
 
 group 'com.koxudaxi.local-data-api'
-version '0.0.1'
+version '0.6.0'
 mainClassName = "io.ktor.server.netty.EngineMain"
 
 
@@ -49,8 +49,8 @@ dependencies {
     implementation "io.ktor:ktor-server-core:$ktor_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
     implementation "io.ktor:ktor-serialization:$ktor_version"
-    implementation "org.mariadb.jdbc:mariadb-java-client:2.7.2"
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
+    api "org.mariadb.jdbc:mariadb-java-client:2.7.2"
+    api group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
     implementation "org.httprpc:httprpc-client:8.1.2"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     testImplementation "com.h2database:h2:1.4.200"
