--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -23,7 +23,7 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
     - name: Install dependencies
       run: |
-         pip install -r requirements.txt
+         pip install ".[all]"
     - run: | 
          cp README.md docs/index.md
          mkdocs build --verbose --clean --strict
