Update jacoco config

--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -38,11 +38,16 @@ repositories {
     maven { url 'https://kotlin.bintray.com/ktor' }
 }
 
+test {
+    finalizedBy jacocoTestReport
+}
+
 jacocoTestReport {
     reports {
         xml.enabled true
         html.enabled true
     }
+    dependsOn test
 }
 shadowJar{
     mergeServiceFiles()
