Update jacoco config

--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -42,6 +42,10 @@ test {
     finalizedBy jacocoTestReport
 }
 
+jacoco {
+    toolVersion = "0.8.6"
+}
+
 jacocoTestReport {
     reports {
         xml.enabled true
