--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -50,6 +50,7 @@ jacocoTestReport {
     reports {
         xml.enabled true
         html.enabled true
+        html.destination file("${projectDir}/jacocoHtml")
     }
     dependsOn test
 }
