Update docs.yaml (#96)
* Update docs.yaml

* Rename Publish.yaml to Publish.yml

* Rename docs.yaml to docs.yml

* Rename CI.yml to ci.yml

* Rename Publish.yml to publish.yml

* Update build.gradle

* Update ci.yml

* Create codecov.yml

* Update ci.yml

* Update publish.yml

* Update codecov.yml

* Update codecov.yml

* Update ci.yml

* Create requirements-docs.txt

* Update ci.yml

* Update docs.yml

* Update codecov.yml

* change package style for jacoco

* fix codecov.yml

* Update jacoco config

* Update jacoco config

* Update jacoco config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         java-version: 11
     - name: test 
-      run: ./gradlew shadowJar test jacocoTestReport
+      run: ./gradlew clean shadowJar test jacocoTestReport
       working-directory: ./kotlin/local-data-api/
     - name: integration test
       run: |
@@ -38,7 +38,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        pip install ".[all]"
+        pip install -r requirements-docs.txt
     - name: build document
       run: |
         cp README.md docs/index.md
@@ -49,5 +49,5 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./kotlin/local-data-api/build/reports/jacoco/test/jacocoTestReport.xml
         flags: unittests
-        root_dir: ./kotlin/local-data-api/
         fail_ci_if_error: true
+        verbose: true
