--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         maven {
               url "https://plugins.gradle.org/m2/"
             }
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
     }
     
     dependencies {
