--- a/kotlin/local-data-api/build.gradle
+++ b/kotlin/local-data-api/build.gradle
@@ -75,6 +75,7 @@ jacocoTestReport {
                             '**/localDataApi/DataAPIException.class',
                             '**/localDataApi/ApplicationKt.class',
                             '**/localDataApi/Field.class',
+                            '**/localDataApi/ArrayValue.class'
                     ]
             )
         }))
