--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,16 +6,14 @@ theme:
     palette:
       primary: 'light blue'
       accent: 'light blue'
-
+    analytics:
+      gtag: 275257853
 markdown_extensions:
   - codehilite
 
 repo_name: koxudaxi/loca-data-api
 repo_url: https://github.com/koxudaxi/local-data-api
-
-google_analytics:
-    - 'UA-142130505-1'
-    - 'auto'
+site_url: https://koxudaxi.github.io/local-data-api
 
 nav:
     - local-data-api: 'index.md'
